# driver-lisence

./: .gitignore  README.md  database.py  df  pyproject.toml  test.db
.github/: pull_request_template.md
alembic/: env.py
alembic/versions/: 0c19701b15de_initial_migration.py  85de520da989_reverse_dependency_between_reports_and_.py
backend/: main.py
backend/api/endpoints/: auth.py  families.py  reports.py  sensors.py  share.py  users.py
backend/core/: auth.py  config.py  database.py  utils.py
backend/core/prompt/: prompts.py
backend/crud/: __init__.py  base.py  families.py  reports.py  sensors.py  users.py
backend/exceptions/: error_messages.py  exception_handlers.py
backend/models/: __init__.py  base.py  families.py  mixin.py  models.py  reports.py  sensors.py  users.py
backend/schemas/: __init__.py  core.py  families.py  reports.py  request_info.py  sensors.py  share.py  token.py  users.py
frontend/: SensorDataSample.csv  orval.config.cjs  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: fastAPISample.ts
frontend/src/components/: Header.jsx  button.jsx  hoge.jsx
frontend/src/pages/: Alert.css  Alert.jsx  Alter.jsx  DetailedResult.css  DetailedResult.jsx  DrivingHistory.css  DrivingHistory.jsx  EmailSend.css  EmailSend.jsx  FamilyProfile.css  FamilyProfile.jsx  FamilyProfile2.jsx  Login.css  Login.jsx  Logout.jsx  SensorDataInput.css  SensorDataInput.jsx  SimpleResult.css  SimpleResult.jsx  Top.css  Top.jsx  TopTest.jsx  UserProfile.css  UserProfile.jsx  UserRegistration.css  UserRegistration.jsx
