[project]
name = "driver-lisence"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shimizu", email = "reborn.titech@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.115.6",
    "sqlalchemy>=2.0.36",
    "databases>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/driver_lisence"]
